--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,40 @@
   margin: 10px auto;
 }
 
-.snazzy {
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+.sidebar {
+  opacity: 0;
+}
+.sidebar.snazzy-enter-active {
+  animation-duration: 2s;
+  animation-name: fadeIn;
+}
+.sidebar.snazzy-leave {
+  animation-duration: 2s;
+  animation-name: fadeOut;
+}
+
+/*.snazzy {
   opacity: 0;
   position: relative;
   left: -200px;
@@ -21,10 +54,11 @@
 }
 
 .fadeIn {
+  transition: all .2s;
   opacity: 1;
 }
 
 .snazzy-enter {
   opacity: 1;
   transition: all 2s;
-}
+}*/
