--- a/styles.css
+++ b/styles.css
@@ -10,55 +10,17 @@
   margin: 10px auto;
 }
 
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-  }
-}
-
 .sidebar {
   opacity: 0;
 }
-.sidebar.snazzy-enter-active {
-  animation-duration: 2s;
-  animation-name: fadeIn;
+.sidebar.snazzy-enter {
+  opacity: 1;
+  animation-duration: 1s;
+  animation-name: bounceIn;
 }
 .sidebar.snazzy-leave {
-  animation-duration: 2s;
-  animation-name: fadeOut;
+  animation-duration: 1s;
+  animation-name: bounceOut;
 }
 
-/*.snazzy {
-  opacity: 0;
-  position: relative;
-  left: -200px;
-}
 
-.reveal {
-  left: 0;
-}
-
-.fadeIn {
-  transition: all .2s;
-  opacity: 1;
-}
-
-.snazzy-enter {
-  opacity: 1;
-  transition: all 2s;
-}*/
